# Instagram-to-Eagle

./: --shortcode DYld7hQCT90 --dry-run  .gitignore  AGENTS.md  README.md  config.example.json  pyproject.toml  requirements.txt
scripts/: build_exe.ps1  make_icon.py  resize_probe.py  run_dev.ps1
src/ins_eagle_sync/: __init__.py  cli.py  config.py  eagle_client.py  gallerydl_runner.py  gui.py  importer.py  metadata_parser.py  proxy_utils.py  runtime.py  services.py  state_store.py  ui_theme.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_eagle_client.py  test_gallerydl_runner.py  test_gui.py  test_importer.py  test_metadata_parser.py  test_proxy_utils.py  test_services.py  test_state_store.py  test_title.py  test_url_detect.py
tests/fixtures/: instagram_sidecar_item.json
