[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ins-eagle-sync"
version = "0.1.0"
description = "Download Instagram content with gallery-dl and import staged files into Eagle."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "customtkinter>=5.2.0",
  "gallery-dl>=1.27.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ins-eagle-sync = "ins_eagle_sync.cli:main"
ins-eagle-sync-gui = "ins_eagle_sync.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.tmp/pytest-run --cache-clear -p no:cacheprovider"
